# semio

./: .gitignore  TODO.txt  dune-project  layout_notes.txt  semio.opam
compiler/: char.sio  common.sio  comparable.sig  dune  dynamics.sig  dynamics.sio  interpret  list.sio  map.sig  map.sio  memory.sig  memory.sio  number.sio  optional.sio  parser.sig  parser.sio  parser_combinators.sig  ref.sio  sexp.sio  source_code_position.sio  string.sio  typed.sig  unbound.sig  unbound.sio  with_positions.sio
src/: context.ml  context.mli  core_ir.abt  core_ir.ml  core_ir.mli  core_type_checker.ml  core_type_checker.mli  dune  dynamics.ml  dynamics.mli  elaborate_with_inference.ml  elaborate_with_inference.mli  import.ml  lexer.mll  parse_infix.ml  parse_infix.mli  parser.mly  primitive.ml  primitive.mli  purity.ml  purity.mli  translation.ml  type_checker.ml  type_checker.mli  typed.abt  typed.ml  typed_and_unification_knot_tying.ml  typed_hand_written.ml.old  typed_hand_written.mli  unbound.ml  unbound.mli  unbound_semantics.ml  unification.ml  unification.mli
tests/: bst.sio  function.sio  module.sio  option.sio  order.sig  order.sio  test1.sio  test2.sio  test3.sio
tex/: rules.tex
