opam-version: "1.2"
maintainer: "Bill Duff <wduff11@gmail.com>"
authors: [ "Bill Duff <wduff11@gmail.com>" ]
homepage: "https://semio.com"
bug-reports: "https://bitbucket.org/billduff/semio/issues"
dev-repo: "ssh://hg@bitbucket.org/billduff/semio"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "core"
  "dune"
  "ppxlib"
  "ppx_jane"
]
descr: "
Semio is a programming langauge. This package contains the ocaml-based interpreter for semio, which
is used to bootstrap the semio compiler.
"
